# pandoc

./: pandoc.cabal
src/Text/Pandoc/: Filter.hs  Readers.hs  Writers.hs
