name:            pandoc
version:         2.9.2.1
cabal-version:   2.0
build-type:      Simple
license:         GPL-2
license-file:    COPYING.md
copyright:       (c) 2006-2020 John MacFarlane
author:          John MacFarlane <jgm@berkeley.edu>
maintainer:      John MacFarlane <jgm@berkeley.edu>
bug-reports:     https://github.com/jgm/pandoc/issues
stability:       alpha
homepage:        https://pandoc.org
category:        Text
tested-with:     GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5
synopsis:        Conversion between markup formats
description:     Pandoc is a Haskell library for converting from one markup
                 format to another, and a command-line tool that uses
                 this library. It can read several dialects of Markdown and
                 (subsets of) HTML, reStructuredText, LaTeX, DocBook, JATS,
                 MediaWiki markup, DokuWiki markup, TWiki markup,
                 TikiWiki markup, Jira markup, Creole 1.0, Haddock markup,
                 OPML, Emacs Org-Mode, Emacs Muse, txt2tags, ipynb (Jupyter
                 notebooks), Vimwiki, Word Docx, ODT, EPUB, FictionBook2,
                 roff man, Textile, and CSV, and it can write Markdown,
                 reStructuredText, XHTML, HTML 5, LaTeX, ConTeXt, DocBook,
                 JATS, OPML, TEI, OpenDocument, ODT, Word docx,
                 PowerPoint pptx, RTF, MediaWiki, DokuWiki, XWiki,
                 ZimWiki, Textile, Jira, roff man, roff ms, plain text,
                 Emacs Org-Mode, AsciiDoc, Haddock markup,
                 EPUB (v2 and v3), ipynb, FictionBook2,
                 InDesign ICML, Muse, LaTeX beamer slides,
                 and several kinds of HTML/JavaScript slide shows
                 (S5, Slidy, Slideous, DZSlides, reveal.js).
                 .
                 In contrast to most existing tools for converting Markdown
                 to HTML, pandoc has a modular design: it consists of a set of
                 readers, which parse text in a given format and produce a
                 native representation of the document, and a set of writers,
                 which convert this native representation into a target
                 format. Thus, adding an input or output format requires
                 only adding a reader or writer.
data-files:
                 -- templates
                 data/templates/styles.html
                 data/templates/default.html4
                 data/templates/default.html5
                 data/templates/default.docbook4
                 data/templates/default.docbook5
                 data/templates/default.jats_archiving
                 data/templates/default.jats_articleauthoring
                 data/templates/default.jats_publishing
                 data/templates/default.tei
                 data/templates/default.opendocument
                 data/templates/default.icml
                 data/templates/default.opml
                 data/templates/default.latex
                 data/templates/default.context
                 data/templates/default.texinfo
                 data/templates/default.jira
                 data/templates/default.man
                 data/templates/default.ms
                 data/templates/default.markdown
                 data/templates/default.muse
                 data/templates/default.commonmark
                 data/templates/default.rst
                 data/templates/default.plain
                 data/templates/default.mediawiki
                 data/templates/default.dokuwiki
                 data/templates/default.xwiki
                 data/templates/default.zimwiki
                 data/templates/default.rtf
                 data/templates/default.s5
                 data/templates/default.slidy
                 data/templates/default.slideous
                 data/templates/default.revealjs
                 data/templates/default.dzslides
                 data/templates/default.asciidoc
                 data/templates/default.asciidoctor
                 data/templates/default.haddock
                 data/templates/default.textile
                 data/templates/default.org
                 data/templates/default.epub2
                 data/templates/default.epub3
                 data/templates/article.jats_publishing
                 -- translations
                 data/translations/*.yaml
                 -- source files for reference.docx
                 data/docx/[Content_Types].xml
                 data/docx/_rels/.rels
                 data/docx/docProps/app.xml
                 data/docx/docProps/core.xml
                 data/docx/docProps/custom.xml
                 data/docx/word/document.xml
                 data/docx/word/fontTable.xml
                 data/docx/word/comments.xml
                 data/docx/word/footnotes.xml
                 data/docx/word/numbering.xml
                 data/docx/word/settings.xml
                 data/docx/word/webSettings.xml
                 data/docx/word/styles.xml
                 data/docx/word/_rels/document.xml.rels
                 data/docx/word/_rels/footnotes.xml.rels
                 data/docx/word/theme/theme1.xml
                 -- source files for reference.odt
                 data/odt/mimetype
                 data/odt/manifest.rdf
                 data/odt/styles.xml
                 data/odt/content.xml
                 data/odt/meta.xml
                 data/odt/settings.xml
                 data/odt/Configurations2/accelerator/current.xml
                 data/odt/Thumbnails/thumbnail.png
                 data/odt/META-INF/manifest.xml
                 -- source files for reference.pptx
                 data/pptx/_rels/.rels
                 data/pptx/docProps/app.xml
                 data/pptx/docProps/core.xml
                 data/pptx/ppt/slideLayouts/_rels/slideLayout1.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout2.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout3.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout4.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout5.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout6.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout7.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout8.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout9.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout10.xml.rels
                 data/pptx/ppt/slideLayouts/_rels/slideLayout11.xml.rels
                 data/pptx/ppt/slideLayouts/slideLayout1.xml
                 data/pptx/ppt/slideLayouts/slideLayout2.xml
                 data/pptx/ppt/slideLayouts/slideLayout3.xml
                 data/pptx/ppt/slideLayouts/slideLayout4.xml
                 data/pptx/ppt/slideLayouts/slideLayout5.xml
                 data/pptx/ppt/slideLayouts/slideLayout6.xml
                 data/pptx/ppt/slideLayouts/slideLayout7.xml
                 data/pptx/ppt/slideLayouts/slideLayout8.xml
                 data/pptx/ppt/slideLayouts/slideLayout9.xml
                 data/pptx/ppt/slideLayouts/slideLayout10.xml
                 data/pptx/ppt/slideLayouts/slideLayout11.xml
                 data/pptx/ppt/_rels/presentation.xml.rels
                 data/pptx/ppt/theme/theme1.xml
                 data/pptx/ppt/presProps.xml
                 data/pptx/ppt/slides/_rels/slide1.xml.rels
                 data/pptx/ppt/slides/_rels/slide2.xml.rels
                 data/pptx/ppt/slides/slide2.xml
                 data/pptx/ppt/slides/slide1.xml
                 data/pptx/ppt/slides/_rels/slide3.xml.rels
                 data/pptx/ppt/slides/_rels/slide4.xml.rels
                 data/pptx/ppt/slides/slide3.xml
                 data/pptx/ppt/slides/slide4.xml
                 data/pptx/ppt/viewProps.xml
                 data/pptx/ppt/tableStyles.xml
                 data/pptx/ppt/slideMasters/_rels/slideMaster1.xml.rels
                 data/pptx/ppt/slideMasters/slideMaster1.xml
                 data/pptx/ppt/presentation.xml
                 data/pptx/ppt/notesMasters/_rels/notesMaster1.xml.rels
                 data/pptx/ppt/notesMasters/notesMaster1.xml
                 data/pptx/ppt/notesSlides/_rels/notesSlide1.xml.rels
                 data/pptx/ppt/notesSlides/notesSlide1.xml
                 data/pptx/ppt/notesSlides/_rels/notesSlide2.xml.rels
                 data/pptx/ppt/notesSlides/notesSlide2.xml
                 data/pptx/ppt/theme/theme2.xml
                 data/pptx/[Content_Types].xml
                  -- stylesheet for EPUB writer
                 data/epub.css
                 -- data for dzslides writer
                 data/dzslides/template.html
                 -- default abbreviations file
                 data/abbreviations
                 -- sample lua custom writer
                 data/sample.lua
                 -- lua init script
                 data/init.lua
                 -- pandoc lua module
                 data/pandoc.lua
                 -- lua List module
                 data/pandoc.List.lua
                 -- bash completion template
                 data/bash_completion.tpl
                 -- jats csl
                 data/jats.csl
                 -- documentation
                 MANUAL.txt, COPYRIGHT
extra-source-files:
                 -- documentation
                 INSTALL.md, AUTHORS.md, README.md,
                 CONTRIBUTING.md, BUGS, changelog.md,
                 man/pandoc.1
                 -- cabal and stack build plans
                 cabal.project
                 stack.yaml
                 -- files needed to build man page
                 man/manfilter.lua
                 man/pandoc.1.before
                 man/pandoc.1.after
                 -- trypandoc
                 trypandoc/Makefile
                 trypandoc/index.html
source-repository head
  type:          git
  location:      git://github.com/jgm/pandoc.git

flag static
  Description:   Use static linking for pandoc executable.
  Default:       False

flag embed_data_files
  Description:   Embed data files in binary for relocatable executable.
  Default:       False

flag trypandoc
  Description:   Build trypandoc cgi executable.
  Default:       False

library
  build-depends: base-noprelude >= 4.9 && < 5,
                 base-compat >= 0.9,
                 syb >= 0.1 && < 0.8,
                 containers >= 0.4.2.1 && < 0.7,
                 unordered-containers >= 0.2 && < 0.3,
                 parsec >= 3.1 && < 3.2,
                 mtl >= 2.2 && < 2.3,
                 exceptions >= 0.8 && < 0.11,
                 filepath >= 1.1 && < 1.5,
                 process >= 1.2.3 && < 1.7,
                 directory >= 1.2.3 && < 1.4,
                 bytestring >= 0.9 && < 0.11,
                 text >= 1.1.1.0 && < 1.3,
                 time >= 1.5 && < 1.10,
                 safe >= 0.3 && < 0.4,
                 zip-archive >= 0.2.3.4 && < 0.5,
                 HTTP >= 4000.0.5 && < 4000.4,
                 texmath >= 0.12.0.1 && < 0.13,
                 xml >= 1.3.12 && < 1.4,
                 split >= 0.2 && < 0.3,
                 random >= 1 && < 1.2,
                 pandoc-types >= 1.20 && < 1.21,
                 aeson >= 0.7 && < 1.5,
                 scientific >= 0.3 && < 0.4,
                 aeson-pretty >= 0.8.5 && < 0.9,
                 tagsoup >= 0.14.6 && < 0.15,
                 base64-bytestring >= 0.1 && < 1.1,
                 zlib >= 0.5 && < 0.7,
                 skylighting >= 0.8.3.2 && < 0.9,
                 skylighting-core >= 0.8.3.2 && < 0.9,
                 data-default >= 0.4 && < 0.8,
                 temporary >= 1.1 && < 1.4,
                 blaze-html >= 0.9 && < 0.10,
                 blaze-markup >= 0.8 && < 0.9,
                 vector >= 0.10 && < 0.13,
                 binary >= 0.5 && < 0.11,
                 SHA >= 1.6 && < 1.7,
                 deepseq >= 1.3 && < 1.5,
                 Glob >= 0.7 && < 0.11,
                 cmark-gfm >= 0.2 && < 0.3,
                 doctemplates >= 0.8 && < 0.9,
                 network-uri >= 2.6 && < 2.7,
                 network >= 2.6,
                 http-client >= 0.4.30 && < 0.7,
                 http-client-tls >= 0.2.4 && < 0.4,
                 http-types >= 0.8 && < 0.13,
                 case-insensitive >= 1.2 && < 1.3,
                 unicode-transforms >= 0.3 && < 0.4,
                 HsYAML >= 0.2 && < 0.3,
                 doclayout >= 0.3 && < 0.4,
                 attoparsec >= 0.12 && < 0.14,
                 text-conversions >= 0.3 && < 0.4,
                 emojis >= 0.1 && < 0.2

  if os(windows) && arch(i386)
     build-depends: basement >= 0.0.10,
                    foundation >= 0.0.23
                    -- basement 0.0.9 won't build on 32-bit windows.
  if os(windows)
    cpp-options:      -D_WINDOWS
  else
    build-depends:  unix >= 2.4 && < 2.8
  if flag(embed_data_files)
     cpp-options:   -DEMBED_DATA_FILES
     build-depends: file-embed >= 0.0 && < 0.1
     other-modules: Text.Pandoc.Data
  if os(windows)
    cpp-options:      -D_WINDOWS
  ghc-options:     -Wall -fno-warn-unused-do-bind
                   -Wincomplete-record-updates
                   -Wnoncanonical-monad-instances
  -- Later:
  -- -Wpartial-fields        (currently used in Powerpoint writer)
  -- -Wmissing-export-lists  (currently some Odt modules violate this)
  -- -Wredundant-constraints (problematic if we want to support older base)
  if impl(ghc >= 8.2)
    ghc-options:     -Wcpp-undef
  if impl(ghc >= 8.4)
    ghc-options:     -Wincomplete-uni-patterns
                     -Widentities
                     -Werror=missing-home-modules
                     -fhide-source-paths

  default-language: Haskell2010
  other-extensions: NoImplicitPrelude
  hs-source-dirs:  src,
                   prelude

  exposed-modules: Text.Pandoc,
                   Text.Pandoc.Options,
                   Text.Pandoc.Extensions,
                   Text.Pandoc.Shared,
                   Text.Pandoc.MediaBag,
                   Text.Pandoc.Error,
                   Text.Pandoc.Filter,
                   Text.Pandoc.Readers,
                   Text.Pandoc.Readers.HTML,
                   Text.Pandoc.Readers.LaTeX,
                   Text.Pandoc.Readers.LaTeX.Types,
                   Text.Pandoc.Readers.Markdown,
                   Text.Pandoc.Readers.CommonMark,
                   Text.Pandoc.Readers.Native,
                   Text.Pandoc.Writers,
                   Text.Pandoc.Writers.Native,
                   Text.Pandoc.Writers.LaTeX,
                   Text.Pandoc.Writers.HTML,
                   Text.Pandoc.Writers.Markdown,
                   Text.Pandoc.Writers.CommonMark,
                   Text.Pandoc.Writers.Math,
                   Text.Pandoc.Writers.Shared,
                   Text.Pandoc.UTF8,
                   Text.Pandoc.Templates,
                   Text.Pandoc.XML,
                   Text.Pandoc.SelfContained,
                   Text.Pandoc.Highlighting,
                   Text.Pandoc.Logging,
                   Text.Pandoc.Process,
                   Text.Pandoc.MIME,
                   Text.Pandoc.Parsing,
                   Text.Pandoc.Asciify,
                   Text.Pandoc.Emoji,
                   Text.Pandoc.ImageSize,
                   Text.Pandoc.BCP47,
                   Text.Pandoc.Class
  other-modules:   Prelude,
                   Text.Pandoc.Class.CommonState,
                   Text.Pandoc.Class.PandocMonad,
                   Text.Pandoc.Class.PandocIO,
                   Text.Pandoc.Class.PandocPure,
                   Text.Pandoc.Filter.JSON,
                   Text.Pandoc.Readers.LaTeX.Parsing,
                   Text.Pandoc.Readers.LaTeX.Lang,
                   Text.Pandoc.Filter.Path,
                   Text.Pandoc.Readers.Metadata,
                   Text.Pandoc.CSS,
                   Text.Pandoc.CSV,
                   Text.Pandoc.UUID,
                   Text.Pandoc.Translations,
                   Text.Pandoc.Slides,
                   Text.Pandoc.Image,
                   Paths_pandoc
  autogen-modules: Paths_pandoc
  buildable:       True

benchmark weigh-pandoc
  type:            exitcode-stdio-1.0
  main-is:         weigh-pandoc.hs
  hs-source-dirs:  benchmark,
                   prelude
  build-depends:   pandoc,
                   base-noprelude >= 4.8 && < 5,
                   base-compat >= 0.9,
                   text,
                   weigh >= 0.0 && < 0.1,
                   mtl >= 2.2 && < 2.3
  default-language: Haskell2010
  other-modules:   Prelude
  ghc-options:     -rtsopts -with-rtsopts=-K16m -threaded
                   -Wall -fno-warn-unused-do-bind
                   -Wincomplete-record-updates
                   -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:     -Wcpp-undef
  if impl(ghc >= 8.4)
    ghc-options:     -Wincomplete-uni-patterns
                     -Widentities
                     -Werror=missing-home-modules
                     -fhide-source-paths
